# gap-client-insights-mcp

./: .env  .env.example  .gitignore  README.md  SETUP.md  client.py  pyproject.toml  requirements.txt  server.py
scripts/: setup.ps1  verify.py
src/: mcp_server.py
